--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,15 @@
 /*  HTML5 ✰ Boilerplate  */
 
-html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
+html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
   font-size: 100%;
   font: inherit;
-  vertical-align: baseline;
-}
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
+  vertical-align: baseline; }
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
 blockquote, q { quotes: none; }
-blockquote:before, blockquote:after,
-q:before, q:after { content: ''; content: none; }
+blockquote:before, blockquote:after, q:before, q:after { content: ''; content: none; }
 ins { background-color: #ff9; color: #000; text-decoration: none; }
 mark { background-color: #ff9; color: #000; font-style: italic; font-weight: bold; }
 del { text-decoration: line-through; }
@@ -30,11 +17,9 @@ abbr[title], dfn[title] { border-bottom: 1px dotted; cursor: help; }
 table { border-collapse: collapse; border-spacing: 0; }
 hr { display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0; }
 input, select { vertical-align: middle; }
-
 body { font:13px/1.231 sans-serif; *font-size:small; } 
 select, input, textarea, button { font:99% sans-serif; }
 pre, code, kbd, samp { font-family: monospace, sans-serif; }
-
 html { overflow-y: hidden; }
 a:hover, a:active { outline: none; }
 ul, ol { margin-left: 2em; }
@@ -43,11 +28,9 @@ nav ul, nav li { margin: 0; list-style:none; list-style-image: none; }
 small { font-size: 85%; }
 strong, th { font-weight: bold; }
 td { vertical-align: top; }
-
 sub, sup { font-size: 75%; line-height: 0; position: relative; }
 sup { top: -0.5em; }
 sub { bottom: -0.25em; }
-
 pre { white-space: pre; white-space: pre-wrap; word-wrap: break-word; padding: 15px; }
 textarea { overflow: auto; }
 .ie6 legend, .ie7 legend { margin-left: -7px; } 
@@ -57,20 +40,17 @@ input[type="checkbox"] { vertical-align: bottom; }
 .ie6 input { vertical-align: text-bottom; }
 label, input[type="button"], input[type="submit"], input[type="image"], button { cursor: pointer; }
 button, input, select, textarea { margin: 0; }
-input:valid, textarea:valid   {  }
+input:valid, textarea:valid {  }
 input:invalid, textarea:invalid { border-radius: 1px; -moz-box-shadow: 0px 0px 5px red; -webkit-box-shadow: 0px 0px 5px red; box-shadow: 0px 0px 5px red; }
 .no-boxshadow input:invalid, .no-boxshadow textarea:invalid { background-color: #f0dddd; }
-
 ::-moz-selection{ background: hsla(214, 50%, 50%, 0.7); color:#fff; text-shadow: none; }
 ::selection { background: hsla(214, 50%, 50%, 0.7); color:#fff; text-shadow: none; }
 a:link { -webkit-tap-highlight-color: #FF5E99; }
-
 button {  width: auto; overflow: visible; }
 .ie7 img { -ms-interpolation-mode: bicubic; }
-
-body, select, input, textarea {  color: #444; }
+body, select, input, textarea { color: #444; }
 h1, h2, h3, h4, h5, h6 { font-weight: bold; }
-a, a:active, a:visited { color: #color: hsla(202, 65%, 86%, 1); }
+a, a:active, a:visited { color: hsla(202, 65%, 86%, 1); }
 a:hover { color: #ffff00; }
 
 /*
@@ -89,11 +69,11 @@ a:hover { color: #ffff00; }
 */
 
 body {
-  background: hsla(214, 33%, 60%, 0.7);
+  background: hsla(214, 33%, 60%, 0.7)/*url(../imgs/grid-ruler.png) no-repeat -1700px -1190px*/;
   width: 100%;
   height: 100%;
   position: relative;
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 
 header, footer {
@@ -284,6 +264,17 @@ footer p {
   display: inline-block;
   position: absolute;
   margin: 0 auto;
+  /*
+  width: 4659px;
+  height: 3362px;
+  */
+}
+
+/* Ruler for positioning purposes */
+#ruler {
+  position: absolute;
+  left: -1800px;
+  top: -1210px;
 }
 
 #layer3 .panel {
