--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,14 @@ footer p {
 
 
 /* Main Navigation */
-
+#main-nav h4 {
+  display: inline-block;
+  position: absolute;
+  right: 660px;
+  top: 10px;
+  color: white;
+  text-shadow: 1px 1px 2px hsla(0, 0%, 8%, 0.5);
+}
 #main-nav ul {
   display: block;
   list-style: none;
@@ -195,33 +202,26 @@ footer p {
 }
 #layer1 {
   background: url('../imgs/wave-1.png') repeat-x 50% 0;
-  width: 10500px;
+  width: 9980px;
   left: -7000px;
   bottom: 50px;
   z-index: 4;
 }
 #layer4 {
   background: url('../imgs/wave-4.png') repeat-x 50% 0;
-  width: 12000px;
+  width: 12100px;
   left: -10000px;
   bottom: 30px;
   z-index: 5;
 }
 #layer5 { 
   background: url('../imgs/wave-5.png') repeat-x 50% 0;
-  width: 15000px;
+  width: 14320px;
   left: -12000px;
   bottom: 0px;
   z-index: 6;
 }
 
-#layer3 { /* layer3 - CONTENT LAYER */
-  width: 96%;
-  height: 88%;
-  left: 100px;
-  top: 0;
-  z-index: 3; /* change to either 2: correct spot in stack; or 7: on top of stack for dev; */
-}
 
 /* CLOUDS PARALLAX */
 .clouds {
@@ -240,14 +240,16 @@ footer p {
 
 /* Main Content Layer with the Panels */
 
-#layer3 {
+#layer3 { /* layer3 - CONTENT LAYER */
+  width: 96%;
+  height: 88%;
+  left: 100px;
+  top: 0;
+  z-index: 7; /* change to either 2: correct spot in stack; or 7: on top of stack for dev; */
+
   display: inline-block;
   position: absolute;
   margin: 0 auto;
-  /*
-  width: 4659px;
-  height: 3362px;
-  */
 }
 
 /* Ruler for positioning purposes */
@@ -271,6 +273,9 @@ footer p {
 
 /* Panels */
 
+.panel-wrap {
+  display: none;
+}
 .panel article {
   color: #000;
   font-size: 12px;
@@ -280,6 +285,12 @@ footer p {
   margin: 0;
   padding: 0 5px;
 }
+.panel article a {
+  color: hsla(202, 40%, 30%, 1);
+}
+.panel article a:hover {
+  color: hsla(0, 100%, 50%, 1);
+}
 .panel article figure {
   float: left;
 }
@@ -288,7 +299,7 @@ footer p {
   position: relative;
   display: inline-block;
   width: 685px;
-  height: 820px;
+  height: 587px;
   float: left;
   overflow: hidden;
 }
@@ -301,7 +312,8 @@ footer p {
   float: right;
   padding: 5px;
   max-height: 610px;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: scroll; /* TODO: This needs to be made to use custom scrollbars */
 }
 .panel article .project-content h2 {
   display: inline-block;
@@ -370,28 +382,27 @@ footer p {
   padding: 2px 0;
 }
 .anythingSlider-default.activeSlider .anythingControls ul {
-  margin: 15px;
+  margin: 5px;
   padding: 0;
   position: relative;
   width: 655px;
-  left: 7px;
-  top: 15px;
+  left: 0;
+  top: 0;
   display: inline-block;
   float: none;
 }
 
 .anythingSlider-default.activeSlider .anythingControls a {
   background: none;
-  border: 3px dashed #fff;
+  border: 1px solid hsla(200, 20%, 40%, 1);
+  padding: 0px;
+  margin: 2px;
   display: inline-block;
-  height: 90px;
-  padding: 2px;
-  margin: 0 7px 17px 7px;
 }
 .anythingSlider-default.activeSlider .anythingControls a.cur,
 .anythingSlider-default.activeSlider .anythingControls a:hover {
   background: none;
-  border: 3px dashed rgba(237, 38, 36, 0.6);
+  border: hsla(0, 100%, 50%, 1);
 }
 .anythingSlider-default .anythingControls a.cur {
   background: none;
