--- a/css/style.css
+++ b/css/style.css
@@ -144,12 +144,12 @@ footer p {
 
 /* Main Navigation */
 #main-nav h4 {
+  color: #fff;
+  text-shadow: 1px 1px 2px hsla(0, 0%, 8%, 0.5);
   display: inline-block;
   position: absolute;
-  right: 660px;
   top: 10px;
-  color: white;
-  text-shadow: 1px 1px 2px hsla(0, 0%, 8%, 0.5);
+  right: 810px;
 }
 #main-nav ul {
   display: block;
@@ -166,7 +166,7 @@ footer p {
 }
 #main-nav li a {
   color: hsla(202, 65%, 90%, 1);
-  /*text-shadow: 1px 1px 2px rgba(20,20,20,0.9);*/
+  text-shadow: 1px 1px 2px rgba(20,20,20,0.9);
   padding: 5px 8px;
   margin: 0 5px 0 0;
   font-size: 14px;
@@ -205,21 +205,21 @@ footer p {
   width: 9980px;
   left: -7000px;
   bottom: -60px;
-  z-index: 4;
+  z-index: 3;
 }
 #layer4 {
   background: url('../imgs/wave-4.png') repeat-x 50% 0;
   width: 12100px;
   left: -10000px;
   bottom: -120px;
-  z-index: 5;
+  z-index: 4;
 }
 #layer5 { 
   background: url('../imgs/wave-5.png') repeat-x 50% 0;
   width: 14320px;
   left: -12000px;
   bottom: -170px;
-  z-index: 6;
+  z-index: 5;
 }
 
 
@@ -252,6 +252,14 @@ footer p {
   z-index: 2;
 }
 
+#bgGame {
+  width: 100%;
+  height: 100%;
+  z-index: 6;
+  position: absolute;
+  display: inline-block;
+  top: 0;
+}
 
 /* Main Content Layer with the Panels */
 
@@ -283,12 +291,22 @@ footer p {
 }
 #layer3 .panel {
   background: hsla(0, 0%, 98%, 0.6);
-  position: absolute;
+  border: 1px solid hsla(200, 70%, 60%, 0.8);
   display: inline-block;
   margin: 55px 20px;
   padding: 10px;
   width: 100%;
+  position: absolute;
   overflow: hidden;
+
+  -webkit-box-shadow: 0px 0px 5px 2px hsla(228, 0%, 0%, 0.5);
+  box-shadow: 0px 0px 15px 0px hsla(228, 0%, 0%, 0.5);
+}
+#layer3 #panel12 {
+  background: none;
+  border: 0px;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
 .panel article {
   color: #000;
@@ -299,8 +317,11 @@ footer p {
   width: 100%;
   margin: 0;
   padding: 0 5px;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
-/*.panel article img {
+/*
+.panel article img {
   max-width: 100%;
   height: 100%;
 }
@@ -315,11 +336,14 @@ footer p {
 }
 */
 .panel article a {
-  color: hsla(202, 40%, 30%, 1);
+    color: hsla(202, 40%, 30%, 1);
+    font-size: 14px;
+    font-weight: bold;
 }
 .panel article a:hover {
-  color: hsla(0, 100%, 50%, 1);
+    color: hsla(0, 100%, 50%, 1);
 }
+
 .panel article figure {
   float: left;
 }
@@ -332,35 +356,42 @@ footer p {
   float: left;
   overflow: hidden;
 }
-.panel article .gallery ul {
-  margin: 0;
-}
 .panel article .project-content {
-  background: hsla(205, 5%, 98%, 1);
   display: inline-block;
   position: relative;
-  width: 30.5666664%;
-  margin-left: 10px;
-  float: right;
-  padding: 5px;
-  max-height: 610px;
+  width: 98%;
+  padding: 0 5px;
   overflow-x: hidden;
-  overflow-y: scroll; /* TODO: This needs to be made to use custom scrollbars */
+}
+.panel .project-content .gallery-thumbs {
+
+}
+.panel .project-content .gallery-thumbs li {
+  display: inline-block;
+  width: auto;
+  margin: 0 6px;
+}
+.panel .project-content .gallery-thumbs p {
+  display: none;
 }
 .panel article .project-content h2 {
-  display: inline-block;
+  display: block;
   font-size: 22px;
   font-weight: normal;
   margin: 5px 0 15px;
 }
+.panel article .project-content h2 a {
+  font-size: 26px;
+}
 .panel article .project-content p {
+  background: hsla(205, 5%, 98%, 1);
   margin-bottom: 10px;
+  padding: 10px;
 }
 .panel article .project-content ul {
   display: inline-block;
-  width: 400px;
-  height: auto;
-  list-style: disc;
+  list-style: none;
+  margin: 0;
 }
 .panel article .project-content li {
   width: auto;
